Add support for collections.
1. A document in a collection can refer to its own assets
2. Asset of specified document in a specified collection can be referred
   to

--- a/test_site/index.html
+++ b/test_site/index.html
@@ -12,4 +12,6 @@
   <a href="nonpost_tests/index.html">Non-post tests</a>
   <p>
   <a href="2017/01/14/tests.html">Post tests</a>
+  <p>
+  <a href="test_collection/Test_collection_item.html">Collection tests</a>
 </div>
